bicycle-service/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bicycle-service
  namespace: bicycle-network
spec:
  selector:
    app: bicycle-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
